<resources>
    <string name="app_name">Panda Sniffer</string>
    <string name="fapp_name">Panda Sniffer</string>
    <string name="tips_vpn_permission">start failed, vpn permission is necessary.</string>
    <string name="select_apps">Select apps</string>

    <string name="done">Done</string>
    <string name="add">Add</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>

    <string name="cancel_all">Cancel all</string>
    <string name="host">ip:</string>
    <string name="port">port:</string>

    <string name="tips_add_apps_to_ctrl">Add Apps You Need Into Control</string>
    <string name="tips_monitoring">Monitoring Connections…</string>
    <string name="tips_start">Click \'Start\' to Start Panda Sniffer Service</string>
    <string name="tips_none_ctrl">Not config any strategies.</string>

    <string name="ctrl_add_app">Add apps</string>
    <string name="ctrl_add_ip">Add an IP</string>
    <string name="ctrl_add_domain">Add a domain</string>

    <string name="settings">Settings</string>
    <string name="setting_ctrl">App Control Strategy</string>
    <string name="setting_dns">DNS</string>
    <string name="setting_proxy_server">Proxy server</string>
    <string name="setting_about">About</string>
    <string name="setting_not_set">not set</string>

    <string name="tips_invalid_input">Invalid input.</string>

    <string name="ctrl_type_none">None</string>
    <string name="ctrl_type_proxy">Proxy</string>
    <string name="ctrl_type_capture">Capture</string>
    <string name="ctrl_type_pxy_cap">Pxy&amp;Cap</string>
    <string name="title_activity_main3">MainActivity</string>
    <string name="network_packet_sniffer">PANDA SNIFFER</string>
    <string name="login_to_continue">Login to Continue</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="ss">Signed in Successfully</string>

</resources>
